[gd_scene load_steps=11 format=3 uid="uid://bnui5u2a8irt4"]

[ext_resource type="Script" path="res://scenes/game_scene/levels/level.gd" id="1_qynh4"]
[ext_resource type="PackedScene" uid="uid://b4xeg1xsdy7ob" path="res://scenes/enemy/enemy_spawner.tscn" id="4_ahohv"]
[ext_resource type="Texture2D" uid="uid://cghp6t1gp68b0" path="res://assets/level1.png" id="4_jalva"]
[ext_resource type="Script" path="res://scenes/game_scene/levels/camera_2d.gd" id="5_0k230"]
[ext_resource type="PackedScene" uid="uid://cewog20nmpwkb" path="res://scenes/player/player_2d.tscn" id="5_77eet"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_2iouq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xqxnu"]
size = Vector2(1721, 73.75)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_3nq6y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d22uh"]
size = Vector2(76, 395)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2au7s"]
size = Vector2(74, 420)

[node name="Level1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qynh4")

[node name="EnemySpawner" parent="." instance=ExtResource("4_ahohv")]
position = Vector2(-120, 450)

[node name="EnemySpawner2" parent="." instance=ExtResource("4_ahohv")]
position = Vector2(1400, 450)

[node name="Background" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -192.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_jalva")
expand_mode = 5

[node name="BottomBoundary" type="StaticBody2D" parent="Background"]
position = Vector2(640, 392)
collision_layer = 2
physics_material_override = SubResource("PhysicsMaterial_2iouq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/BottomBoundary"]
shape = SubResource("RectangleShape2D_xqxnu")

[node name="LeftBoundary" type="StaticBody2D" parent="Background"]
position = Vector2(-25, 190)
collision_layer = 4
physics_material_override = SubResource("PhysicsMaterial_3nq6y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/LeftBoundary"]
shape = SubResource("RectangleShape2D_d22uh")

[node name="RightBoundary" type="StaticBody2D" parent="Background"]
position = Vector2(1310, 190)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/RightBoundary"]
shape = SubResource("RectangleShape2D_2au7s")

[node name="Player2D" parent="." instance=ExtResource("5_77eet")]
z_index = 1
texture_filter = 1
scale = Vector2(1.5, 1.5)

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2(644, 435)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)
zoom = Vector2(2, 2)
script = ExtResource("5_0k230")

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 60.0

[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
